# matflow-cipher

./: .pre-commit-config.yaml  pyproject.toml
.chglog/: config.yml
.github/workflows/: release.yml
matflow_cipher/: __init__.py  main.py
matflow_cipher/snippets/: generate_cipher_input.py  generate_phase_field_input_from_random_voronoi.py  generate_phase_field_input_from_volume_element.py
